openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  labels:
    app: chatbot
spec:
  selector:
    matchLabels:
      app: chatbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: IMAGE
          ports:
          - containerPort: 8080
            name: theport
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
      restartPolicy: Always
