openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  labels:
    app: chatbot
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: theport
  selector:
    app: chatbot
